--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://114.115.151.102:3306/stu?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.yuzo.stu.entity
