--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=root
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.yuzo.stu.entity
+
+spring.thymeleaf.cache=false
