--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://114.115.151.102:3306/stu?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/stu?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
